[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/tent/buttons/turn_left_vanish14.png" type="Texture" id=1]
[ext_resource path="res://players/Catapult/Sprites/Sprite_sheet_catapul.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD/move_to_buttons/target.gd" type="Script" id=3]
[ext_resource path="res://traps/spikes/Health.gd" type="Script" id=4]
[ext_resource path="res://players/archer/sprite/target.png" type="Texture" id=5]
[ext_resource path="res://UI/hp_bar/sprites/hp_health.png" type="Texture" id=6]
[ext_resource path="res://players/archer/sprite/invis_button.png" type="Texture" id=7]
[ext_resource path="res://UI/hp_bar/sprites/hp_background.png" type="Texture" id=8]
[ext_resource path="res://players/Catapult/CatapultPlayer.gd" type="Script" id=9]
[ext_resource path="res://players/knight/External_Script.gd" type="Script" id=10]

[sub_resource type="Animation" id=4]
resource_name = "walking_Up"

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.83766
height = 18.7114

[sub_resource type="CapsuleShape2D" id=2]
radius = 47.1185
height = 94.2371

[sub_resource type="CircleShape2D" id=3]

[node name="Catapult" type="KinematicBody2D" groups=["Knight"]]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": "How to Create a new Unit"
}
Unit_ID = 1
hit_delay = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
reset_on_save = false
anims/walking_Up = SubResource( 4 )
__meta__ = {
"_editor_description_": "how to set up animations :
1. insert your name of the animations like this
2. walking_Up
3. walking_down
4. walking_left
5. walking
6. Attacking"
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9, 12 )
scale = Vector2( 6.16731, 6.16731 )
texture = ExtResource( 2 )
hframes = 18
frame = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 89 )
rotation = 1.57745
scale = Vector2( 8.30135, 8.30135 )
shape = SubResource( 1 )

[node name="knight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="knight"]
position = Vector2( -3.49026, 12.2159 )
shape = SubResource( 2 )

[node name="Damage_Tick" type="Timer" parent="."]
wait_time = 0.25

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 12.8439
margin_top = -15.5964
margin_right = 52.8439
margin_bottom = 24.4036
rect_scale = Vector2( -0.239088, 0.27467 )
script = ExtResource( 4 )

[node name="TextureProgress" type="TextureProgress" parent="Control"]
margin_left = 275.396
margin_top = -361.902
margin_right = 403.396
margin_bottom = -329.902
rect_scale = Vector2( -3.08193, 3.0668 )
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.0352941, 1, 0.0352941, 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -47.1186, -102.963 )
scale = Vector2( 0.488637, 0.767857 )
normal = ExtResource( 1 )

[node name="target" type="Node2D" parent="."]
z_index = 164
script = ExtResource( 3 )

[node name="Top_button" type="TouchScreenButton" parent="target"]
position = Vector2( -55.8442, -108.198 )
scale = Vector2( 4.03561, 6.83804 )
normal = ExtResource( 7 )

[node name="target" type="Sprite" parent="target"]
visible = false
position = Vector2( 724.229, 22.6867 )
scale = Vector2( 5.4719, 4.7084 )
z_index = 49
texture = ExtResource( 5 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.77
path_max_distance = 10.0

[node name="Hit_timer" type="Timer" parent="."]
autostart = true

[node name="Clients" type="Area2D" parent="."]
collision_layer = 524289
collision_mask = 524289
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clients"]
position = Vector2( 4.76837e-07, 3 )
scale = Vector2( -15.5634, -6.27003 )
shape = SubResource( 3 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="target/Top_button" to="target" method="_on_Top_button_pressed"]
